Refactor modem simulator message handling